# lean

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  core.rs  lib.rs  main.rs  test_helper.rs
test/: gen_sample_data.sh
