[package]
name = "lean"
version = "0.1.0"
authors = ["Karsten Heinze <karsten@sidenotes.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
getopts = "0.2"
mktemp = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.8", git = "https://github.com/karheinz/serde-yaml/", branch = "feature/multiline" }
regex = "1.3"
